<resources>
    <string name="app_name">Угадай число!</string>
    <string name="behind">Недолёт!</string>
    <string name="ahead">Перелёт!</string>
    <string name="hit">В точку!</string>
    <string name="input_value">Ввести значение</string>
    <string name="play_more">Сыграть ещё</string>
    <string name="try_to_guess">Попробуй угадать число (1 &#8211; 100)</string>
    <string name="error">Неверный ввод!</string>
    <string name="exit">Выход</string>
    <string name="change">Изменение</string>
    <string name="ru">Русский</string>
    <string name="en">Английский</string>
    <string name="miss">Мазила!!!</string>
    <string name="count">Осталось попыток:</string>
    <string name="over">Ты проиграл.</string>
</resources>
